--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "jwt-decode": "^3.1.2",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-camera": "^4.2.1",
