--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.9.0",
     "react-native-webview": "^12.0.2",
-    "socket.io-client": "^4.6.1"
+    "socket.io-client": "^4.6.1",
+    "url-parse": "^1.5.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
